# contextguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ACTIVITYGATE_EXAMPLE.md  MVP_DOTNET.md  SOURCE_PATTERN_RULES.md
src/contextguard/: __init__.py  __main__.py  cli.py  config.py  explain.py  models.py
src/contextguard/generators/: __init__.py  ci.py
src/contextguard/scanners/: __init__.py  dotnet.py
tests/: test_dotnet_scanner.py  test_explain.py  test_source_patterns.py
